<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_db"
        android:textAllCaps="false"
        android:text="@string/create_db"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_db"
        android:textAllCaps="false"
        android:text="@string/add_db"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/update_db"
        android:textAllCaps="false"
        android:text="@string/update_db"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/delete_db"
        android:textAllCaps="false"
        android:text="@string/delete_db"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/query_db"
        android:textAllCaps="false"
        android:text="@string/query_db"/>

</LinearLayout>